[tool.poetry]
name = "first_app"
version = "0.1.0"
description = ""
authors = ["Younes Piro <piroyounes148@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
pymongo = "^4.0.1"
dnspython = "^2.2.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
